--- a/index.html
+++ b/index.html
@@ -7,24 +7,31 @@
     <link rel="stylesheet" href="./public/css/tailwind/tailwind.min.css"> 
     <link rel="stylesheet" href="./public/css/main.css">
     <link rel="icon" type="image/png" sizes="32x32" href="shuffle-for-tailwind.png">
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap" rel="stylesheet">
 
 
     <style>
-      body {
-        font-family: 'Fira Mono', monospace  !important;
+      @font-face {
+        font-family: '印品鸿蒙体' !important;
+        src: url('../font/yinpin_hongmengti.ttf') format('truetype') !important;
+        font-weight: normal !important;
+        font-style: normal;
       }
       
+      body {
+        font-family: '印品鸿蒙体', sans-serif !important;
+        font-weight: normal !important;
+      }
     </style>
 <script>
   AOS.init({
-    duration: 5000, // Sets the duration for each animation
-    once: false,    // Allow repeat animation on scroll
-    offset: 200     // Set the offset from the top to trigger animations
+    duration: 5000, 
+    once: false,   
+    offset: 20    
   });
 </script>
 
@@ -55,7 +62,7 @@
       <div class="w-auto">
         <div class="flex flex-wrap items-center">
           <div class="w-auto hidden lg:block">
-            <button class=" block py-3.5 uppercase text-xs tracking-px text-white font-bold bg-white bg-opacity-20 hover:bg-opacity-10 transition ease-in rounded-10 transition-transform duration-300 hover:scale-125 px-2">smk negeri 2</button>
+            <button class=" block py-3.5 uppercase text-xs tracking-px text-white  bg-white bg-opacity-20 hover:bg-opacity-10 transition ease-in rounded-10 transition-transform duration-300 hover:scale-125 px-2">smk negeri 2</button>
           </div>
           <div class="w-auto lg:hidden">
             <button x-on:click="mobileNavOpen = !mobileNavOpen">
@@ -119,15 +126,15 @@
     </div>
   </nav>
   
-  <div class="relative container mx-auto px-4 !min-h-screen   pb-20">
+  <div class="relative container mx-auto px-4 !min-h-screen   pb-20 p-4">
     <div class="relative flex flex-wrap justify-center items-center -m-6 lg:pt-32 pb-36 min-h-screen ">
       <div class="w-full lg:w-auto p-6 self-start pt-10">
         <img loading="lazy" decoding="async" class="mx-auto w-60 transition-transform duration-300 hover:scale-125 " loading="lazy" decoding="async" src="./public/images/wildan-header.svg" alt="">
-        <p class="text-lg text-center font-bold mt-4 text-white">Wildan Fathan</p>
+        <p class="text-lg text-center mt-4 text-white">Wildan Fathan</p>
       </div>
       <div class="flex-1 p-6">
         <div class="lg:max-w-2xl mx-auto">
-          <div class="mb-6  flex items-center max-w-max mx-auto px-5 py-2.5 uppercase font-semibold tracking-px text-white bg-white bg-opacity-20 rounded-lg text-xl animate-pulse ">
+          <div class="mb-6  flex items-center max-w-max mx-auto px-5 py-2.5 uppercase  tracking-px text-white bg-white bg-opacity-20 rounded-lg text-xl animate-pulse ">
             <svg class="mr-2 matrix-icon" width="14" height="14" viewbox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M6.33427 2.74895C6.54382 2.10403 7.45621 2.10403 7.66575 2.74895L8.41445 5.0532C8.50816 5.34162 8.77693 5.53689 9.08019 5.53689H11.503C12.1811 5.53689 12.4631 6.40462 11.9145 6.8032L9.95436 8.22731C9.70902 8.40556 9.60636 8.72152 9.70007 9.00994L10.4488 11.3142C10.6583 11.9591 9.92018 12.4954 9.37158 12.0968L7.41146 10.6727C7.16612 10.4945 6.8339 10.4945 6.58856 10.6727L4.62844 12.0968C4.07985 12.4954 3.34171 11.9591 3.55126 11.3142L4.29995 9.00994C4.39367 8.72152 4.29101 8.40556 4.04566 8.22731L2.08555 6.8032C1.53695 6.40462 1.81889 5.53689 2.497 5.53689H4.91984C5.22309 5.53689 5.49186 5.34162 5.58558 5.0532L6.33427 2.74895Z" fill="white"></path>
             </svg>
@@ -135,13 +142,13 @@
               <img loading="lazy" decoding="async" loading="lazy" decoding="async" src="./public/images/icon/pplg-white-icon.svg" alt="PPLG Icon" class="w-20">
             </span>
           </div>
-          <h1 class="mb-6  text-center text-white text-4xl md:text-9xl xl:text-12xl font-bold matrix-text p-4">Pengembangan Perangkat Lunak dan Gim</h1>
+          <h1 class="mb-6  text-center text-white text-4xl md:text-9xl xl:text-12xl  matrix-text p-4">Pengembangan Perangkat Lunak dan Gim</h1>
           <p class="mb-10 font-medium text-xl text-center text-white">
             Website mengenai Kelas RPL Angkatan 2022/2023
             <br>
             Kreasi Website dan Design Gambar Lainnya !
           </p>
-          <button class="group mb-9 relative flex items-center justify-center  px-24 py-5 mx-auto w-full lg:w-auto uppercase text-white text-xs font-semibold tracking-px bg-gray-900 overflow-hidden rounded-md">
+          <button class="group mb-9 relative flex items-center justify-center  px-24 py-5 mx-auto w-full lg:w-auto uppercase text-white text-xs  tracking-px bg-gray-900 overflow-hidden rounded-md">
             <div class="absolute transform -translate-x-full group-hover:-translate-x-0 h-full w-full transition ease-in-out duration-500 bg-gradient-fuchsia"></div>
             <p class="relative z-10 mr-2">Project kami</p>
             <svg class="relative z-10" width="19" height="18" viewbox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -153,7 +160,7 @@
       </div>
       <div class="w-full lg:w-auto p-6 self-end">
         <img loading="lazy" decoding="async" class="mx-auto w-60 transition-transform duration-300 hover:scale-125" loading="lazy" decoding="async" src="./public/images/rahsya-header.svg" alt="">
-        <p class="text-lg text-center font-bold mt-4 text-white">Rahsya Benova Akbar</p>
+        <p class="text-lg text-center  mt-4 text-white">Rahsya Benova Akbar</p>
       </div>
     </div>
   </div>
@@ -169,11 +176,11 @@
   });
 </script>
 
-<section class="relative py-12 bg-white/50 pb-20  pt-20">
-  <h1 class="max-w-5xl mb-4 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl text-center text-white font-semibold mx-auto pb-10 relative z-20">
+<section class="relative py-12 bg-white/50 pb-20  pt-20 p-4">
+  <h1 class="max-w-5xl mb-4 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl text-center text-white  mx-auto pb-10 relative z-20">
     Apasih PPLG Itu ? <br>
 </h1>
-<h1 class="max-w-5xl mb-4 text-md tracking-tight leading-none xl:text-lg text-center text-gray-200 font-semibold mx-auto pb-10 relative z-20">
+<h1 class="max-w-5xl mb-4 text-md tracking-tight leading-none xl:text-lg text-center text-gray-200  mx-auto pb-10 relative z-20">
   PPLG (Pengembangan Perangkat Lunak dan Gim) adalah bidang keahlian yang fokus pada pembuatan dan pengembangan perangkat lunak, termasuk aplikasi dan gim.
   <span id="moreText" style="display: none;">
     Dalam PPLG, siswa belajar berbagai keterampilan seperti pemrograman, desain antarmuka, pemecahan masalah, dan pengujian perangkat lunak, yang berguna di dunia industri teknologi.
@@ -218,7 +225,7 @@
   </div>
   <div class="container relative z-10 grid grid-cols-1 gap-10 px-6 mx-auto lg:grid-cols-3">
     <div class="animate__animated animate__fadeInLeft ms1s">
-      <h1 class="mt-2 text-3xl font-bold text-white md:text-4xl tracking-wide">Tujuan Jurusan</h1>    
+      <h1 class="mt-2 text-3xl  text-white md:text-4xl tracking-wide">Tujuan Jurusan</h1>    
       <p class="mt-4 text-gray-200">Jurusan PPLG, tujuan jurusan ini adalah membekali siswa dengan keterampilan dalam pengembangan perangkat lunak, pemrograman, dan teknologi digital. Kami fokus pada penguasaan teknik coding, pembuatan aplikasi, dan analisis sistem yang relevan dengan industri. Harapannya, lulusan siap bersaing dalam dunia kerja atau melanjutkan pendidikan lebih tinggi.</p>
     </div>
     <div class="grid grid-cols-1 gap-12 lg:col-span-2 sm:grid-cols-2" id="card-container">
@@ -241,7 +248,7 @@
                 c0-21.894,17.774-39.69,39.669-39.69c21.916,0,39.604,17.774,39.604,39.69C368.041,264.026,350.309,281.693,328.437,281.693z"/>
         </svg>
         <div>
-            <h3 class="font-bold text-xl text-white">Mobile Apps</h3>
+            <h3 class=" text-xl text-white">Mobile Apps</h3>
             <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi mobile berbasis sistem operasi Android untuk dioperasikan di smartphone masing-masing.</p>
         </div>
       </div>
@@ -264,7 +271,7 @@
                 c0-21.894,17.774-39.69,39.669-39.69c21.916,0,39.604,17.774,39.604,39.69C368.041,264.026,350.309,281.693,328.437,281.693z"/>
         </svg>
         <div>
-            <h3 class="font-bold text-xl text-white">Mobile Apps</h3>
+            <h3 class=" text-xl text-white">Mobile Apps</h3>
             <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi mobile berbasis sistem operasi Android untuk dioperasikan di smartphone masing-masing.</p>
         </div>
       </div>
@@ -287,7 +294,7 @@
                 c0-21.894,17.774-39.69,39.669-39.69c21.916,0,39.604,17.774,39.604,39.69C368.041,264.026,350.309,281.693,328.437,281.693z"/>
         </svg>
         <div>
-            <h3 class="font-bold text-xl text-white">Mobile Apps</h3>
+            <h3 class=" text-xl text-white">Mobile Apps</h3>
             <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi mobile berbasis sistem operasi Android untuk dioperasikan di smartphone masing-masing.</p>
         </div>
       </div>
@@ -310,7 +317,7 @@
                 c0-21.894,17.774-39.69,39.669-39.69c21.916,0,39.604,17.774,39.604,39.69C368.041,264.026,350.309,281.693,328.437,281.693z"/>
         </svg>
         <div>
-            <h3 class="font-bold text-xl text-white">Mobile Apps</h3>
+            <h3 class=" text-xl text-white">Mobile Apps</h3>
             <p class="text-gray-200 mt-2">Siswa diharapkan mampu membuat aplikasi mobile berbasis sistem operasi Android untuk dioperasikan di smartphone masing-masing.</p>
         </div>
       </div>  
