--- a/index.html
+++ b/index.html
@@ -224,9 +224,14 @@
     <div class="absolute inset-0 bg-black opacity-80"></div>
   </div>
   <div class="container relative z-10 grid grid-cols-1 gap-10 px-6 mx-auto lg:grid-cols-3">
-    <div class="animate__animated animate__fadeInLeft ms1s">
-      <h1 class="mt-2 text-3xl  text-white md:text-4xl tracking-wide">Tujuan Jurusan</h1>    
-      <p class="mt-4 text-gray-200">Jurusan PPLG, tujuan jurusan ini adalah membekali siswa dengan keterampilan dalam pengembangan perangkat lunak, pemrograman, dan teknologi digital. Kami fokus pada penguasaan teknik coding, pembuatan aplikasi, dan analisis sistem yang relevan dengan industri. Harapannya, lulusan siap bersaing dalam dunia kerja atau melanjutkan pendidikan lebih tinggi.</p>
+    <!-- Centered Column -->
+    <div class="flex items-center justify-center animate__animated animate__fadeInLeft ms1s lg:col-span-1 lg:row-start-1">
+        <div>
+            <h1 class="mt-2 text-3xl text-white md:text-4xl tracking-wide md:text-center">Tujuan Jurusan</h1>    
+            <p class="mt-4 text-gray-200">
+                Jurusan PPLG, tujuan jurusan ini adalah membekali siswa dengan keterampilan dalam pengembangan perangkat lunak, pemrograman, dan teknologi digital. Kami fokus pada penguasaan teknik coding, pembuatan aplikasi, dan analisis sistem yang relevan dengan industri. Harapannya, lulusan siap bersaing dalam dunia kerja atau melanjutkan pendidikan lebih tinggi.
+            </p>
+        </div>
     </div>
     <div class="grid grid-cols-1 gap-12 lg:col-span-2 sm:grid-cols-2" id="card-container">
 
