--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <div class="container relative z-10 grid grid-cols-1 gap-10 px-6 mx-auto lg:grid-cols-3">
     <div class="flex items-center justify-center animate__animated animate__fadeInLeft ms1s lg:col-span-1 lg:row-start-1">
         <div>
-            <h1 class="mt-2 text-3xl text-white md:text-4xl tracking-wide md:text-center"  data-aos="zoom-out-right">Tujuan Jurusan</h1>    
+            <h1 class="mt-2 text-3xl text-white text-center lg:text-left md:text-4xl tracking-wide "  data-aos="zoom-out-right">Tujuan Jurusan</h1>    
             <p class="mt-4 text-gray-200" data-aos="zoom-out-left" data-aos-offset="200"            >
                 Jurusan PPLG, tujuan jurusan ini adalah membekali siswa dengan keterampilan dalam pengembangan perangkat lunak, pemrograman, dan teknologi digital. Kami fokus pada penguasaan teknik coding, pembuatan aplikasi, dan analisis sistem yang relevan dengan industri. Harapannya, lulusan siap bersaing dalam dunia kerja atau melanjutkan pendidikan lebih tinggi.
             </p>
