--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
 
     <style>
@@ -341,17 +341,17 @@
 
 
 
-<section class="container mx-auto md:pb-28 lg:px-8" id="card">
+<section class="container mx-auto pb-20 pt-20 p-4" id="Guru">
   <div class="p-10 mx-0 sm:mx-32">
-    <h2 class="text-2xl font-extrabold text-center text-gray-200 sm:text-3xl">
-      CARD
-    </h2>
+    <h1 class="max-w-5xl mb-4 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl text-center text-white  mx-auto pb-10 relative z-20" data-aos="zoom-out-down">
+      Guru PPLG <br>
+  </h1>
   </div>
 
   <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 duration-500">
     <div class="grid-items hover:scale-105">
       <a href="#" class="block bg-gray-700/60 border-2 shadow-2xl rounded-2xl shadow-blue-400/50 border-blue-400">
-        <img loading="lazy" alt="" src="https://images.unsplash.com/photo-1605721911519-3dfeb3be25e7?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=870&amp;q=80" class="object-cover w-full h-64 sm:h-80 lg:h-96 rounded-t-2xl rounded-b-3xl">
+        <img loading="lazy" alt="" src="./public/images/guru/guru-yuni.webp" class="object-cover w-full h-64 sm:h-80 lg:h-96 rounded-t-2xl rounded-b-3xl">
   
         <h3 class="px-5 mt-4 text-lg font-bold text-white sm:text-sm md:text-lg">
           Lorem, ipsum dolor.
@@ -365,7 +365,7 @@
 
     <div class="grid-items hover:scale-105">
       <a href="#" class="block bg-gray-700/60 border-2 shadow-2xl rounded-2xl shadow-blue-400/50 border-blue-400">
-        <img loading="lazy" alt="" src="https://images.unsplash.com/photo-1605721911519-3dfeb3be25e7?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=870&amp;q=80" class="object-cover w-full h-64 sm:h-80 lg:h-96 rounded-t-2xl rounded-b-3xl">
+        <img loading="lazy" alt="" src="./public/images/guru/guru-meri.webp" class="object-cover w-full h-64 sm:h-80 lg:h-96 rounded-t-2xl rounded-b-3xl">
   
         <h3 class="px-5 mt-4 text-lg font-bold text-white sm:text-sm md:text-lg">
           Lorem, ipsum dolor.
@@ -379,7 +379,7 @@
 
     <div class="grid-items hover:scale-105">
       <a href="#" class="block bg-gray-700/60 border-2 shadow-2xl rounded-2xl shadow-blue-400/50 border-blue-400">
-        <img loading="lazy" alt="" src="https://images.unsplash.com/photo-1605721911519-3dfeb3be25e7?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=870&amp;q=80" class="object-cover w-full h-64 sm:h-80 lg:h-96 rounded-t-2xl rounded-b-3xl">
+        <img loading="lazy" alt="" src="./public/images/guru/guru-nina.webp" class="object-cover w-full h-64 sm:h-80 lg:h-96 rounded-t-2xl rounded-b-3xl">
   
         <h3 class="px-5 mt-4 text-lg font-bold text-white sm:text-sm md:text-lg">
           Lorem, ipsum dolor.
@@ -393,7 +393,7 @@
 
     <div class="grid-items hover:scale-105">
       <a href="#" class="block bg-gray-700/60 border-2 shadow-2xl rounded-2xl shadow-blue-400/50 border-blue-400">
-        <img loading="lazy" alt="" src="https://images.unsplash.com/photo-1605721911519-3dfeb3be25e7?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=870&amp;q=80" class="object-cover w-full h-64 sm:h-80 lg:h-96 rounded-t-2xl rounded-b-3xl">
+        <img loading="lazy" alt="" src="./public/images/guru/guru-nova.webp" class="object-cover w-full h-64 sm:h-80 lg:h-96 rounded-t-2xl rounded-b-3xl">
   
         <h3 class="px-5 mt-4 text-lg font-bold text-white sm:text-sm md:text-lg">
           Lorem, ipsum dolor.
@@ -407,11 +407,48 @@
   </div>
 <!-- Large 16:9 image below the grid -->
 <div class="mt-8">
-  <img 
-    src="https://images.unsplash.com/photo-1605721911519-3dfeb3be25e7?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1600&amp;q=80" 
-    alt="Large Image" 
-    class="w-full h-auto object-cover rounded-lg aspect-video">
+  <div class="swiper-container w-full rounded-lg overflow-hidden border-2 shadow-2xl shadow-blue-400/50 border-blue-400">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide">
+        <img 
+          src="./public/images/guru/guru-all-normal.webp" 
+          alt="First Image" 
+          class="w-full h-auto object-cover aspect-video">
+      </div>
+      <div class="swiper-slide">
+        <img 
+          src="./public/images/guru/guru-all-ok.webp" 
+          alt="Second Image" 
+          class="w-full h-auto object-cover aspect-video">
+      </div>
+    </div>
+    <!-- Swiper Navigation Controls -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+  </div>
 </div>
+
+<!-- Include Swiper's JavaScript at the end of the body -->
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+<!-- Swiper Initialization Script -->
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    new Swiper('.swiper-container', {
+      loop: true,  // Loop mode
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+      autoplay: {
+        delay: 5000,  // Auto change every 5 seconds
+        disableOnInteraction: false,
+      },
+    });
+  });
+</script>
 </section>  
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
