--- a/index.html
+++ b/index.html
@@ -455,75 +455,72 @@
 
 
 
-
-<section class="pb-10 pt-10 p-4 relative" style="overflow: hidden !important;" id="Guru">
+<section class="pb-20 pt-20 p-4 relative" style="overflow: hidden !important;" id="Planet">
   <div class="absolute inset-0" style="z-index: -20;"></div>
   <div class="container mx-auto">
-    <div class="p-8 mx-0 sm:mx-20 relative z-10">
-
-    </div>
+    <div class="p-8 mx-0 sm:mx-20 relative z-10"></div>
     <div class="table h-full mx-auto">
       <div id="solar" class="h-fit table-cell align-middle mx-auto">
         <div class="in relative w-64 h-64 flex items-center justify-center scale-[0.6]">
           
-          <div class="rounded-full bg-white w-16 h-16 flex items-center justify-center absolute">
+          <div class="rounded-full bg-yellow-500 w-16 h-16 flex items-center justify-center absolute">
             <div class="absolute -top-3 text-white text-xs flex flex-col items-center">Sun</div>
-            <div class="rounded-full bg-white w-12 h-12 animate-ping"></div>
+            <div class="rounded-full bg-yellow-400 w-12 h-12 animate-ping"></div>
           </div>
 
-          <div class="rounded-full border border-white/50 w-24 h-24 flex items-center justify-center absolute animate-spin" style="animation-duration: 2.5s;">
-            <div class="absolute -top-4 text-white text-xs flex flex-col items-center">
+          <div class="rounded-full border border-gray-400 w-24 h-24 flex items-center justify-center absolute animate-spin" style="animation-duration: 2.5s;">
+            <div class="absolute -top-4 text-gray-300 text-xs flex flex-col items-center">
               Mercury
-              <div class="rounded-full h-1 w-1 bg-white"></div>
+              <div class="rounded-full h-1 w-1 bg-gray-300"></div>
             </div>
           </div>
 
-          <div class="rounded-full border w-32 h-32 flex items-center justify-center absolute animate-spin" style="animation-duration: 8s;">
-            <div class="absolute -top-4 text-white text-xs flex flex-col items-center">
+          <div class="rounded-full border border-yellow-300 w-32 h-32 flex items-center justify-center absolute animate-spin" style="animation-duration: 8s;">
+            <div class="absolute -top-4 text-yellow-200 text-xs flex flex-col items-center">
               Venus
-              <div class="rounded-full h-2 w-2 bg-white"></div>
+              <div class="rounded-full h-2 w-2 bg-yellow-200"></div>
             </div>
           </div>
 
-          <div class="rounded-full border w-40 h-40 flex items-center justify-center absolute animate-spin" style="animation-duration: 10s;">
-            <div class="absolute -top-4 text-white text-xs flex flex-col items-center">
+          <div class="rounded-full border border-blue-500 w-40 h-40 flex items-center justify-center absolute animate-spin" style="animation-duration: 10s;">
+            <div class="absolute -top-4 text-blue-400 text-xs flex flex-col items-center">
               Earth
-              <div class="rounded-full h-[0.6rem] w-[0.6rem] bg-white"></div>
+              <div class="rounded-full h-[0.6rem] w-[0.6rem] bg-blue-400"></div>
             </div>
           </div>
 
-          <div class="rounded-full border w-48 h-48 flex items-center justify-center absolute animate-spin" style="animation-duration: 14s;">
-            <div class="absolute -top-[1rem] text-white text-xs flex flex-col items-center">
+          <div class="rounded-full border border-red-500 w-48 h-48 flex items-center justify-center absolute animate-spin" style="animation-duration: 14s;">
+            <div class="absolute -top-[1rem] text-red-400 text-xs flex flex-col items-center">
               Mars
-              <div class="rounded-full h-1.5 w-1.5 bg-white"></div>
+              <div class="rounded-full h-1.5 w-1.5 bg-red-400"></div>
             </div>
           </div>
 
-          <div class="rounded-full border w-[15rem] h-[15rem] flex items-center justify-center absolute animate-spin" style="animation-duration: 35s;">
-            <div class="absolute -top-8 text-white text-xs flex flex-col items-center">
+          <div class="rounded-full border border-orange-500 w-[15rem] h-[15rem] flex items-center justify-center absolute animate-spin" style="animation-duration: 35s;">
+            <div class="absolute -top-8 text-orange-400 text-xs flex flex-col items-center">
               Jupiter
-              <div class="rounded-full h-[2.5rem] w-[2.5rem] bg-white"></div>
+              <div class="rounded-full h-[2.5rem] w-[2.5rem] bg-orange-400"></div>
             </div>
           </div>
 
-          <div class="rounded-full border w-[22rem] h-[22rem] flex items-center justify-center absolute animate-spin" style="animation-duration: 60s;">
-            <div class="absolute -top-6 text-white text-xs flex flex-col items-center">
+          <div class="rounded-full border border-yellow-600 w-[22rem] h-[22rem] flex items-center justify-center absolute animate-spin" style="animation-duration: 60s;">
+            <div class="absolute -top-6 text-yellow-500 text-xs flex flex-col items-center">
               Saturn
-              <div class="rounded-full h-[2rem] w-[2rem] bg-white"></div>
+              <div class="rounded-full h-[2rem] w-[2rem] bg-yellow-500"></div>
             </div>
           </div>
 
-          <div class="rounded-full border w-[26rem] h-[26rem] flex items-center justify-center absolute animate-spin" style="animation-duration: 90s;">
-            <div class="absolute -top-5 text-white text-xs flex flex-col items-center">
+          <div class="rounded-full border border-cyan-400 w-[26rem] h-[26rem] flex items-center justify-center absolute animate-spin" style="animation-duration: 90s;">
+            <div class="absolute -top-5 text-cyan-300 text-xs flex flex-col items-center">
               Uranus
-              <div class="rounded-full h-[1.2rem] w-[1.2rem] bg-white"></div>
+              <div class="rounded-full h-[1.2rem] w-[1.2rem] bg-cyan-300"></div>
             </div>
           </div>
 
-          <div class="rounded-full border w-[30rem] h-[30rem] flex items-center justify-center absolute animate-spin" style="animation-duration: 130s;">
-            <div class="absolute -top-5 text-white text-xs flex flex-col items-center">
+          <div class="rounded-full border border-blue-800 w-[30rem] h-[30rem] flex items-center justify-center absolute animate-spin" style="animation-duration: 130s;">
+            <div class="absolute -top-5 text-blue-700 text-xs flex flex-col items-center">
               Neptune
-              <div class="rounded-full h-[1rem] w-[1rem] bg-white"></div>
+              <div class="rounded-full h-[1rem] w-[1rem] bg-blue-700"></div>
             </div>
           </div>
 
@@ -532,7 +529,6 @@
     </div>
   </div>
 </section>
-
 
 
 
