--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
     <a id="readMoreLink" href="javascript:void(0);" onclick="toggleReadMore()" class="text-gray-300 hover:underline">Read more</a>
   </h1>
 
+  
   <script>
     function toggleReadMore() {
       const moreText = document.getElementById("moreText");
@@ -347,8 +348,8 @@
             Guru PPLG <br>
           </h1>
         </div>
-        <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 duration-500" style="overflow: hidden !important;">
-          <div class="grid-items transition-transform duration-300 hover:scale-105" data-aos="zoom-in-right" data-aos="fade-right" data-aos-delay="100" data-aos-offset="400">
+        <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 duration-500 " style="overflow: hidden important;">
+          <div class="grid-items !transition-transform !duration-300 !hover:scale-105" data-aos="zoom-in-right" data-aos="fade-right" data-aos-delay="100" data-aos-offset="400">
             <a href="javascript:void(0)" class="block bg-gray-700/60 border-2 !pointer-events-none shadow-2xl rounded-2xl shadow-blue-400/50 border-blue-400" style="pointer-events:none !important;">
               <img loading="lazy" decoding="async" alt="" src="./public/images/guru/guru-yuni.webp" class="object-cover w-full h-64 sm:h-80 lg:h-96 rounded-t-2xl rounded-b-3xl object-top">
         
