--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <a id="readMoreLink" href="javascript:void(0);" onclick="toggleReadMore()" class="text-gray-300 hover:underline">Read more</a>
   </h1>
 
-  
+  <!-- malas -->
   <script>
     function toggleReadMore() {
       const moreText = document.getElementById("moreText");
