--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Primary Meta Tags -->
     <meta name="author" content="Zavents">
     <meta name="description" content="Website Mengenai PPLG SMK Negeri 2 Pekanbaru ">
-
+    <meta name="keywords" content="PPLG, SMK Negeri 2 Pekanbaru, website pendidikan, program keahlian, teknologi, pendidikan vokasi, pengembangan website, jurusan PPLG, teknologi informasi, desain web, pemrograman komputer, SMK di Pekanbaru, siswa berprestasi, pendidikan berbasis teknologi, SMK terbaik, keahlian komputer, pengolahan data, informatika, pengembangan aplikasi, keterampilan digital">
 
 
     <!-- Open Graph / Facebook -->
@@ -40,7 +40,20 @@
 
 
 
-
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "PPLG Website",
+        "description": "Website Mengenai PPLG SMK Negeri 2 Pekanbaru.",
+        "url": "https://pplg2.pages.dev",
+        "author": {
+          "@type": "Person",
+          "name": "Zavents"
+        }
+      }
+      </script>
+      
 
 
     <style>
