--- a/index.html
+++ b/index.html
@@ -132,29 +132,29 @@ margin: 0;
           <!-- Left links -->
           <ul class="flex flex-col justify-center lg:rounded-full lg:bg-white list-style-none lg:flex-row ms-auto lg:bg-opacity-10" data-twe-navbar-nav-ref>
           <!-- Home link -->
-              <li class="py-2 lg:pe-1 ps-1" data-twe-nav-item-ref>
+              <li class="py-2  ps-1" data-twe-nav-item-ref>
                   <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform     hover:text-gray-300 lg:rounded-full lg:hover:bg-white lg:hover:bg-opacity-20" 
-                  aria-current="page" href="#about"data-twe-nav-link-ref>About us</a>
+                  aria-current="page" href="#about"data-twe-nav-link-ref>About</a>
               </li>
-              <li class="py-2 lg:pe-1 ps-1" data-twe-nav-item-ref>
+              <li class="py-2  ps-1" data-twe-nav-item-ref>
                   <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform     hover:text-gray-300 rounded-full hover:bg-white hover:bg-opacity-20" 
                   aria-current="page" href="#guru"data-twe-nav-link-ref>Guru</a>
               </li>
-              <li class="py-2 lg:pe-1 ps-1" data-twe-nav-item-ref>
+              <li class="py-2  ps-1" data-twe-nav-item-ref>
                   <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform     hover:text-gray-300 rounded-full hover:bg-white hover:bg-opacity-20" 
                   aria-current="page" href="#fasilitas"data-twe-nav-link-ref>Fasilitas</a>
               </li>
-              <li class="py-2 lg:pe-1 ps-1" data-twe-nav-item-ref>
+              <li class="py-2  ps-1" data-twe-nav-item-ref>
                   <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform     hover:text-gray-300 rounded-full hover:bg-white hover:bg-opacity-20" 
                   aria-current="page" href="./kelas.html"data-twe-nav-link-ref>Kelas</a>
               </li>
-              <li class="py-2 lg:pe-1 ps-1" data-twe-nav-item-ref>
+              <li class="py-2  ps-1" data-twe-nav-item-ref>
                   <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform     hover:text-gray-300 rounded-full hover:bg-white hover:bg-opacity-20" 
-                  aria-current="page" href="#website"data-twe-nav-link-ref>Website Kami</a>
+                  aria-current="page" href="#website"data-twe-nav-link-ref>Website</a>
               </li>
-              <li class="py-2 lg:pe-1 ps-1" data-twe-nav-item-ref>
+              <li class="py-2  ps-1" data-twe-nav-item-ref>
                 <a class="px-3 py-2 text-lg tracking-wider text-white transition-transform     hover:text-gray-300 rounded-full hover:bg-white hover:bg-opacity-20" 
-                aria-current="page" href="#photo"data-twe-nav-link-ref>Photo & Video</a>
+                aria-current="page" href="#photo"data-twe-nav-link-ref>Galeri</a>
             </li>
             </ul>
 
@@ -215,13 +215,13 @@ margin: 0;
   <h1 class="max-w-5xl mb-4 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl text-center text-white  mx-auto pb-10 relative z-20" data-aos="zoom-out-down">
     Apasih PPLG Itu ? <br>
 </h1>
-<h1 class="max-w-5xl mb-4 text-md tracking-tight leading-none xl:text-lg text-center text-gray-200  mx-auto pb-10 relative z-20" data-aos="zoom-out-up" data-aos-delay="200">
+<p class="max-w-5xl mb-4 text-md tracking-tight leading-none xl:text-lg text-center text-gray-200  mx-auto pb-10 relative z-20" data-aos="zoom-out-up" data-aos-delay="200">
   PPLG (Pengembangan Perangkat Lunak dan Gim) adalah bidang keahlian yang fokus pada pembuatan dan pengembangan perangkat lunak, termasuk aplikasi dan gim.
   <span id="moreText" style="display: none;">
     Dalam PPLG, siswa belajar berbagai keterampilan seperti pemrograman, desain antarmuka, pemecahan masalah, dan pengujian perangkat lunak, yang berguna di dunia industri teknologi.
   </span>
-  <a id="readMoreLink" href="javascript:void(0);" onclick="toggleReadMore()" class="text-gray-300 hover:underline">Read more</a>
-</h1>
+  <a id="readMoreLink" href="javascript:void(0);" onclick="toggleReadMore()" class=" hover:underline text-blue-300">Read more</a>
+</p>
 <style>
   @keyframes flip-icon {
     0% {
@@ -248,18 +248,18 @@ margin: 0;
     <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"></div>
 
   </div>
-  <div class="container relative z-10 grid grid-cols-1 gap-10 px-6 mx-auto lg:grid-cols-3">
+  <div class="container relative z-10 grid grid-cols-1 gap-10   mx-auto lg:grid-cols-3">
     <div class="flex items-center justify-center animate__animated animate__fadeInLeft ms1s lg:col-span-1 lg:row-start-1">
         <div>
-            <h1 class="mt-2 text-3xl text-white text-center lg:text-left md:text-4xl tracking-wide "  data-aos="zoom-out-right">Tujuan Jurusan</h1>    
+            <h1 class="mt-2 text-xl text-white text-center lg:text-left md:text-4xl tracking-wide "  data-aos="zoom-out-right">Tujuan Jurusan</h1>    
             <p class="mt-4 text-gray-200" data-aos="zoom-out-left" data-aos-offset="200"            >
                 Jurusan PPLG, tujuan jurusan ini adalah membekali siswa dengan keterampilan dalam pengembangan perangkat lunak, pemrograman, dan teknologi digital. Kami fokus pada penguasaan teknik coding, pembuatan aplikasi, dan analisis sistem yang relevan dengan industri. Harapannya, lulusan siap bersaing dalam dunia kerja atau melanjutkan pendidikan lebih tinggi.
             </p>
         </div>
     </div>
-    <div class="grid grid-cols-2 gap-12 lg:col-span-2 sm:grid-cols-2" id="card-container">
+    <div class="grid grid-cols-2 lg:col-span-2 sm:grid-cols-2" id="card-container">
 
-    <div class="relative flex flex-col items-center space-y-4 p-4 rounded-lg transition-colors duration-300 group card" data-aos="fade-down-right" data-aos-delay="500">
+    <div class="relative flex flex-col items-center space-y-4 p-2 rounded-lg transition-colors duration-300 group card" data-aos="fade-down-right" data-aos-delay="500">
       <svg xmlns="http:/www.w3.org/2000/svg" width="40" height="40" class="icon default-icon  text-gray-200" viewBox="0 0 502.664 502.664">
         <path d="M310.166,397.593H75.951V61.671h234.151v25.13h31.472V54.811C341.595,24.677,316.853,0,286.74,0H99.355
             C69.199,0,44.522,24.677,44.522,54.811v393.02c0,30.178,24.677,54.833,54.833,54.833H286.74
@@ -278,11 +278,11 @@ margin: 0;
             c0-21.894,17.774-39.69,39.669-39.69c21.916,0,39.604,17.774,39.604,39.69C368.041,264.026,350.309,281.693,328.437,281.693z"/>
     </svg>
       <div class="text-center">
-          <h3 class="text-lg md:text-xl text-white">Mobile Apps</h3>
-          <p class="text-gray-200 mt-2 text-sm md:text-base !text-left ">Siswa diharapkan mampu membuat aplikasi mobile berbasis sistem operasi Android untuk dioperasikan di smartphone masing-masing.</p>
+          <h3 class="text-xs  md:text-xl text-white">Mobile Apps</h3>
+          <p class="text-gray-200 mt-2 text-xs md:text-base  ">Siswa diharapkan mampu membuat aplikasi mobile berbasis sistem operasi Android untuk dioperasikan di smartphone masing-masing.</p>
       </div>
     </div>
-    <div class="relative flex flex-col items-center space-y-4 p-4 rounded-lg transition-colors duration-300 group card" data-aos="fade-down-left" data-aos-delay="500">
+    <div class="relative flex flex-col items-center space-y-4  p-2 rounded-lg transition-colors duration-300 group card" data-aos="fade-down-left" data-aos-delay="500">
       <svg fill="currentColor" version="1.1" id="Capa_1" xmlns="http:/www.w3.org/2000/svg" xmlns:xlink="http:/www.w3.org/1999/xlink" 
            viewBox="0 0 34.418 34.418" xml:space="preserve" width="40" height="40" class="icon default-icon text-gray-200">
         <g>
@@ -305,12 +305,12 @@ margin: 0;
         </g>
       </svg>
       <div class="text-center">
-        <h3 class="text-lg md:text-xl text-white">Desktop Software</h3>
-        <p class="text-gray-200 mt-2 text-sm md:text-base !text-left">Siswa diharapkan mampu membuat aplikasi berbasis desktop dengan menganalisa kebutuhan bisnis yang ada di dunia nyata.</p>
+        <h3 class="text-xs  md:text-xl text-white">Desktop Software</h3>
+        <p class="text-gray-200 mt-2 text-xs md:text-base ">Siswa diharapkan mampu membuat aplikasi berbasis desktop dengan menganalisa kebutuhan bisnis yang ada di dunia nyata.</p>
       </div>
     </div>
     
-    <div class="relative flex flex-col items-center space-y-4 p-4 rounded-lg transition-colors duration-300 group card" data-aos="fade-up-right" data-aos-delay="500">
+    <div class="relative flex flex-col items-center space-y-4  p-2 rounded-lg transition-colors duration-300 group card" data-aos="fade-up-right" data-aos-delay="500">
       <svg fill="currentColor" version="1.1" id="Capa_1" xmlns="http:/www.w3.org/2000/svg" xmlns:xlink="http:/www.w3.org/1999/xlink" 
        viewBox="0 0 512 445.91" xml:space="preserve" width="40" height="40" class="icon default-icon text-gray-200">
       <g>
@@ -323,22 +323,22 @@ margin: 0;
       </svg>
 
       <div class="text-center">
-          <h3 class="text-lg md:text-xl text-white">Web Application</h3>
-          <p class="text-gray-200 mt-2 text-sm md:text-base !text-left">Siswa diharapkan mampu membuat aplikasi website dari nol dengan mengikuti standar pemrograman yang berlaku di dunia industri saat ini.
+          <h3 class="text-xs  md:text-xl text-white">Web Application</h3>
+          <p class="text-gray-200 mt-2 text-sm md:text-base ">Siswa diharapkan mampu membuat aplikasi website dari nol dengan mengikuti standar pemrograman yang berlaku di dunia industri saat ini.
 
 
           </p>
       </div>
     </div>
 
-    <div class="relative flex flex-col items-center space-y-4 p-4 rounded-lg transition-colors duration-300 group card" data-aos="fade-up-left" data-aos-delay="500">
+    <div class="relative flex flex-col items-center space-y-4  p-2 rounded-lg transition-colors duration-300 group card" data-aos="fade-up-left" data-aos-delay="500">
       <svg xmlns="http:/www.w3.org/2000/svg" width="40" height="40" class="icon default-icon  text-gray-200" viewBox="0 0 502.664 502.664">
                 
       <path d="M285.195,399.619c-1.621,0-2.871-1.327-2.871-2.911    c0-1.62,1.25-2.909,2.871-2.909h38.094c1.622,0,2.875,1.289,2.875,2.909c0,1.584-1.253,2.911-2.875,2.911H285.195z     M285.195,423.491c-1.621,0-2.871-1.289-2.871-2.911c0-1.62,1.25-2.909,2.871-2.909h38.094c1.622,0,2.875,1.289,2.875,2.909    c0,1.622-1.253,2.911-2.875,2.911H285.195z M365.066,320.413c-11.346-6.04-24.83-13.298-40.6-22.251l-41.85,68.854    c-0.148,0.222-0.293,0.405-0.44,0.627c-1.105,1.178-2.946,1.252-4.128,0.147l-21.955-20.483l-24.314,24.167v0.036l0,0h-0.075    v0.038l-0.072,0.036v0.037l0,0v0.037h-0.072v0.035l0,0l-0.076,0.038l0,0v0.036l-0.072,0.038l-0.076,0.036l0,0l-0.221,0.111    l-0.072,0.036l0,0l-0.075,0.037l0,0l0,0l-0.072,0.036l0,0l-0.072,0.037l-0.076,0.037l0,0l-0.073,0.037l0,0h-0.076l0,0    l-0.072,0.037l0,0h-0.072l0,0l-0.076,0.035l0,0h-0.072l0,0h-0.075l0,0l-0.072,0.038l0,0l0,0h-0.072l0,0h-0.076l0,0h-0.072l0,0    h-0.076l0,0h-0.145h-0.076h-0.072h-0.075h-0.072l0,0h-0.076l0,0l-0.072-0.038l0,0h-0.072l0,0h-0.076l0,0l-0.072-0.035l0,0h-0.076    l-0.072-0.037l0,0h-0.072l0,0l-0.147-0.074l0,0l-0.148-0.073l0,0l-0.072-0.037l0,0l-0.076-0.036l0,0l0,0l-0.072-0.038l0,0    l-0.148-0.073v-0.036h-0.072l-0.075-0.112h-0.072v-0.035v-0.037h-0.076v-0.037v-0.036h-0.072v-0.038h-0.072v-0.036v-0.037h-0.076    V371.4v-0.038h-0.072v-0.036v-0.038l-0.075-0.035l0,0l-0.073-0.074v-0.037l-0.072-0.185l0,0l-0.075-0.036l-0.072-0.147    l-0.076-0.11l-39.639-72.427c-16.207,9.21-29.987,16.541-41.405,22.62c-26.526,14.183-40.379,21.551-47.156,32.565    c-7.367,12.01-7.147,29.398-6.63,65.611c0.147,10.278,0.295,21.993,0.295,34.04c54.521,12.452,108.969,18.53,163.421,18.456    c54.449-0.073,108.896-6.335,163.421-18.456c0-11.604,0.145-23.062,0.293-33.155c0.443-36.583,0.664-54.155-6.778-66.312    C406.031,342.37,392.03,334.854,365.066,320.413z M259.925,342.886l19.45,18.199l40.303-66.349l-14.66-13.445L259.925,342.886z     M192.289,294.811l38.166,69.811l21.735-21.661l-45.167-61.669L192.289,294.811z M257.495,68.873    c-21.884,0-41.777,8.88-56.146,23.247c-11.566,11.567-19.525,26.672-22.251,43.507c0.147,0.406,0.22,0.884,0.147,1.326    c-0.295,1.841-0.516,3.72-0.588,5.599c-0.148,1.843-0.221,3.759-0.221,5.711c0,4.273,0.293,8.841,0.881,13.63v0.111    c0.592,4.79,1.477,9.799,2.582,14.81c0.072,0.258,0.146,0.589,0.146,0.883c0,0.259-0.073,0.479-0.073,0.737    c4.2,18.162,11.935,37.614,22.917,53.528c13.112,19.009,30.795,32.824,52.606,32.824c21.808,0,39.563-13.815,52.679-32.824    c1.4-2.063,2.799-4.2,4.128-6.373l-44.208,16.799c-2.285,0.847-4.644,0.737-6.705-0.185c-1.99-0.922-3.76-2.616-4.568-4.863    c-0.885-2.247-0.736-4.642,0.221-6.667c0.884-2.063,2.578-3.758,4.787-4.605l61.744-23.504    c7.441-18.972,11.349-38.865,11.349-54.3c0-21.92-8.915-41.777-23.284-56.144C299.27,77.752,279.449,68.873,257.495,68.873z     M194.499,129.364c-0.737-1.4-0.148-3.168,1.25-3.905c1.4-0.737,3.17-0.147,3.907,1.252c1.545,2.948,3.387,5.49,5.452,7.663    c6.262,6.668,14.81,9.983,23.501,10.794c8.696,0.811,17.611-0.921,24.317-4.384c2.43-1.253,4.641-2.727,6.333-4.421l0.076-0.038    c15.25-14.441,20.923-17.129,23.357-14.588l0.145,0.147c1.477,1.731,1.032,4.237,0.443,7.146    c-0.443,2.137-0.957,4.606-0.516,5.785v0.074c0.367,0.589,1.841,0.553,5.82-0.922c5.453-2.063,13.484-4.532,20.703-4.863h0.076    c8.104-0.295,15.177,1.989,17.459,10.131c0.445,1.547-0.512,3.131-2.062,3.573c-1.546,0.405-3.167-0.515-3.535-2.025    c-1.329-4.752-6.116-6.078-11.643-5.858h-0.072c-6.413,0.295-13.853,2.58-18.864,4.458c-8.18,3.02-11.787,1.289-13.26-2.284    l-0.076-0.295c-1.029-2.689-0.368-6.042,0.221-8.915c0.296-1.4,1.4-1.695,0.961-2.137c-0.148-0.185-3.172,3.463-15.178,14.81    v0.037c-2.214,2.063-4.793,3.832-7.739,5.341c-7.664,3.979-17.684,5.932-27.481,5.011c-10.021-0.922-19.893-4.826-27.264-12.563    C198.403,135.848,196.265,132.827,194.499,129.364z M279.375,178.692c-1.474,0.626-3.168-0.073-3.832-1.547    c-0.588-1.474,0.076-3.168,1.549-3.795c0.072-0.037,18.053-8.104,26.744,0.627c1.105,1.105,1.105,2.983,0,4.125    c-1.177,1.105-3.019,1.105-4.123-0.037C293.891,172.245,279.449,178.692,279.375,178.692z M159.5,139.458    c3.315-27.703,15.105-52.275,32.272-69.995c17.459-18.051,40.524-28.993,65.722-28.993c25.271,0,48.331,10.942,65.794,28.993    c17.167,17.72,28.958,42.292,32.272,69.995h7.663v35.33h-23.137c1.915-9.506,2.875-18.567,2.875-26.524    c0-2.948-0.076-5.895-0.443-8.805h7.222c-3.315-26.12-14.44-49.254-30.651-65.943c-16.431-16.946-37.946-27.224-61.595-27.224    c-23.578,0-45.168,10.278-61.523,27.224c-16.21,16.688-27.408,39.823-30.651,65.943h7.147c-0.296,2.91-0.441,5.857-0.441,8.805    c0,7.957,0.958,17.019,2.947,26.524h-22.695v-35.33H159.5z M348.56,189.892c0-1.622,1.329-2.948,2.95-2.948    c1.618,0,2.871,1.326,2.871,2.948v12.157c0,1.326-0.884,2.432-2.062,2.799l-84.292,32.087c-1.545,0.589-3.166-0.184-3.755-1.657    c-0.589-1.51,0.147-3.205,1.694-3.758l82.593-31.461V189.892z M237.97,173.35c1.473,0.627,2.134,2.322,1.473,3.795    c-0.589,1.474-2.286,2.173-3.759,1.547c-0.072,0-14.513-6.447-20.334-0.627c-1.105,1.142-2.947,1.142-4.127,0.037    c-1.104-1.142-1.104-3.02,0-4.125C219.918,165.246,237.894,173.313,237.97,173.35z" style="fill-rule:evenodd;clip-rule:evenodd;"/>
     </svg>
       <div class="text-center">
-          <h3 class="text-lg md:text-xl text-white">IT Konsultan</h3>
-          <p class="text-gray-200 mt-2 text-sm md:text-base !text-left">Siswa diharapkan mampu memberikan gambaran dan saran pengembangan bisnis tradisional untuk menerapkan teknologi pada industrinya.</p>
+          <h3 class="text-xs  md:text-xl text-white">IT Konsultan</h3>
+          <p class="text-gray-200 mt-2 text-sm md:text-base ">Siswa diharapkan mampu memberikan gambaran dan saran pengembangan bisnis tradisional untuk menerapkan teknologi pada industrinya.</p>
       </div>
     </div>
   
