--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Stylesheet(s) and Icons -->
     <link rel="icon" type="image/png" sizes="32x32" href="./public/images/icon/pplg-white-icon.svg">
     <link rel="stylesheet" href="./public/css/main.css">
-    <link rel="stylesheet" href="./public/css/tailwind/tailwind.min.css"> 
+    <link rel="stylesheet" href="./public/css/style.css"> 
     <link rel="stylesheet" href="./public/css/animate.css" />
     <link rel="stylesheet" href="./public/css/aos.css" />
     <link rel="stylesheet" href="./public/css/swiper.css" />
@@ -675,12 +675,12 @@
   </section>
 </section>
 
-  <section class="bg-black/50">
+  <section class="bg-black/50" id="fasilitas">
     <div class="h-full bg-fixed  bg-center bg-cover relative z-10 bg-black/50" style="background-image: url('./public/images/fasilitas-bg.webp') ">
       
   <div class="absolute top-0 left-0 bg-gradient-to-b from-black via-transparent to-transparent  w-full h-44 "></div>
   
-      <div class="absolute inset-0 bg-black/60    -z-10"></div>
+      <div class="absolute inset-0     -z-10" style="background-color: rgba(0, 0, 0, 0.753);"></div>
       <div class="container mx-auto pt-20 pb-20 h-full p-4  " style="overflow: hidden !important;">
         <h1 class="max-w-5xl mb-4 text-4xl tracking-tight leading-none md:text-5xl xl:text-6xl text-center text-white mx-auto" data-aos="zoom-out-down">
           Fasilitas <br>
